# keycloak_manager

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: KeycloakRestAPI.postman_collection.json
keycloak_manager/: manager.py  models.py
tests/: test_manager.py
